# askelad

./: .gitignore  AGENTS.MD  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  .gitignore  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 42d39a70c485_create_users_table.py  78515111bbfd_add_attachment_ids_to_agent_messages.py  8a77b1a31128_add_multi_chat_threads.py  8d7a237d16d3_add_documents_table.py  a1b2c3d4e5f6_add_user_type_to_users.py  b8c9d0e1f2a3_add_founder_work_system.py  c622d92c47dd_create_projects_table.py  f1a2b3c4d5e6_add_agent_runtime_tables.py
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  mcp_sim.py  prompts.py  tools.py
backend/app/agents/skills/cofounder/: first-principles-thinking.md  investor-readiness-and-fundraising.md  opportunity-cost-analysis.md  startup-metrics-framework.md  two-way-vs-one-way-doors.md
backend/app/agents/skills/finance/: cloud-and-infrastructure-cost-optimization.md  pricing-strategy.md  runway-and-burn-rate-management.md  (+2 more)
backend/app/api/: deps.py
backend/app/api/v1/: agents.py  documents.py  projects.py  settings.py  work.py
backend/app/auth/: jwt_handler.py  oauth.py  router.py  service.py
backend/app/core/: llm_proxy.py
backend/app/db/: database.py  models.py
backend/app/schemas/: agents.py  documents.py  projects.py  settings.py  users.py  work.py
backend/app/services/: agents.py  documents.py  projects.py  settings.py  work.py
backend/tests/: test_agent_service.py  test_agent_skills_tools.py  test_api_contracts.py
(+46 files in other folders)
